add new new brand route and remove brand index authentication
